--- a/eCademy.Oblig.Knockout/eCademy.Oblig.Knockout.csproj
+++ b/eCademy.Oblig.Knockout/eCademy.Oblig.Knockout.csproj
@@ -278,6 +278,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Products\Edit.cshtml" />
+    <Content Include="Views\Products\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
